--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "pnpm with-env next build",
+		"clean": "rm -rf .next .turbo .cache node_modules dist _generated",
 		"dev": "pnpm with-env next dev --turbo",
 		"start": "pnpm with-env next start",
 		"lint": "pnpm with-env next lint",
