--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ BETTER_AUTH_GOOGLE_CLIENT_ID=""
 BETTER_AUTH_GOOGLE_CLIENT_SECRET=""
 CONVEX_DEPLOYMENT="http://localhost:3000"
 
+# polar
+POLAR_ACCESS_TOKEN=""             # Org token for Better Auth checkout/portal (same value as below)
+POLAR_PRODUCT_ID_PRO_MONTHLY=""   # Pro 1 month $5, 1000 credits/mo
+POLAR_PRODUCT_ID_PRO_YEARLY=""    # Pro 1 year $50, 2000 credits/mo
+POLAR_SERVER="sandbox"            # or "production"
+
 # nextjs
 NEXT_PUBLIC_CONVEX_URL=""
 NEXT_PUBLIC_CONVEX_SITE_URL=""
