--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,8 +11,15 @@
 	},
 	"dependencies": {
 		"@convex-dev/better-auth": "^0.10.10",
+		"@convex-dev/polar": "^0.7.3",
+		"@polar-sh/better-auth": "^1.8.0",
+		"@polar-sh/sdk": "^0.42.5",
 		"better-auth": "^1.4.18",
 		"convex": "^1.31.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20.19.33",
+		"typescript": "^5.9.3"
 	},
 	"exports": {
 		"./convex/_generated/api": {
