--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,10 @@
 	},
 	"dependencies": {
 		"@convex-dev/better-auth": "^0.10.10",
+		"@convex-dev/polar": "^0.7.3",
 		"@digitalcentral/backend": "workspace:*",
 		"@hookform/resolvers": "^5.2.2",
+		"@polar-sh/better-auth": "^1.8.0",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
 		"@radix-ui/react-aspect-ratio": "^1.1.8",
